@@ -2,6 +2,7 @@ glFusion ChangeLog
 
 v1.1.9
 ------
+- Ratings were not moved to new story when story id changed (Mark)
 - Media Gallery: Fixed issue where quota was not always set properly when
   member album enrollment was enabled (Mark)
 - Fixed default username and password being translated accidentally (Eric)
